--- a/game_notes.org
+++ b/game_notes.org
@@ -8,6 +8,7 @@
 - 2 Hell Jackals
 - Ancient Elephant (location varies)
 ** [ ] Go to the mansion in Atlantis
+** [ ] Kill the stormborn giant dude
 
 * Inventory
 ** Weapons
