--- a/fishboi/game_notes.org
+++ b/fishboi/game_notes.org
@@ -20,9 +20,8 @@
 - Reflect spell runes
 - Key to mansion in Atlantis
 - Hourglass with sand to Kareem's domain
-- 5 gold pieces
 - 5 silver pieces
-- 10 platinum
+- 9 platinum
 - Vampire fang
 ** Spells
 *** Translate Speech
@@ -72,3 +71,6 @@ We shipwrecked on Dragon's roost. The king is on the other side of the beach wit
 ** Session 7: [2022-10-26 Wed]
 We got off the island and got lots of money for our trip to Atlantis
 ** Session 8: [2022-11-09 Wed]
+We got to Atlantis and bribed our way past the guards. Atlantis is a beautiful place made of gold, silver, and glowing stone built underneath the ocean floor. We are approached by a tour guide named No. He summons a chariot to take us to our mansion. King Neptune wont traitors speak their names. We get to the house and we are greeted by our butler Sharky who we convinced that we inherited from the previous owner. We get a tour of the house and decide to throw a party. A few water gods show up and we challenge them to a drinking contest and Gurt got punted through the wall of the mansion. The guy gets drunk enough to say his name and he gets dragged to hell. There is a hooded figure in the middle and he is revealed to be the hobbit the house belonged too. Surrounding him is portals to many other realms The guy gets drunk enough to say his name and he gets dragged to hell. There is a hooded figure in the middle and he is revealed to be the hobbit the house belonged too. Surrounding him is portals to many other realms. We are level nine.
+** Session 9: [2022-11-30 Wed]
+Gilford was not planning on being robbed, but he was drunk. A demon took his wife and kids, he can't retrieve them because he is a hobbit
