--- a/player-introduction.org
+++ b/player-introduction.org
@@ -11,12 +11,12 @@ Hello! This is going to be a lot at first, sorry about that. I've simplified whe
 Please print (or electronically complete) the *blank character* sheet included in the Google Drive. Be sure to check the *reference character* sheet if you feel lost, or just reach out to me and I can help out.
 
 * Character Setup
-1. Pick a [[id:4ef8f616-b62a-42d3-987e-525e4187ae66][race]]
+1. Pick a [[id:4ef8f616-b62a-42d3-987e-525e4187ae66][race]]^{1}
   Please pick something you'd like to role play as in a long running story, not just a character with the best stats. Each class will have a description of their advantages, disadvantages, class abilities, and other details about a given race in the universe.
 
-  Please complete the instructions on the race sheet to select your race and set the appropriate stats.
-2. Pick a [[id:campaign-classes][class]]
-   Similarly, please pick something you'd like to role play as in a long running story, not just the easiest class to fight with. There are many other important parts of the game to consider! Each class also has a set of subclasses. These can help you specialize your character.
+  Please complete the instructions on the race sheet to select your race and set your hit points.
+2. Pick a [[id:campaign-classes][class]]^{2}
+   Similarly, please pick something you'd like to role play as in a long running story, not just the easiest class to fight with. There are many other important parts of the game to consider! Each class also has a set of subclasses that can help you specialize your character.
 
    Please complete the instructions on the class sheet to select your class and subclass. Once you select your class, save that page. It will tell you what to do at each level as your character gains experience. You should also save your subclass page, it will show you what abilities you gain as you level up.
 
@@ -28,3 +28,6 @@ Please print (or electronically complete) the *blank character* sheet included i
    This part is all up to you. Who do you want to be in this world?
 
 Complete these five steps and you'll be ready to play. Have fun customizing your characters, and good luck!
+
+[fn:1] Glossary: [[id:a3719559-2b06-443a-b75a-96c9aa3f3b26][race]]
+[fn:2] Glossary: [[id:a3719559-2b06-443a-b75a-96c9aa3f3b26][class]]
