--- a/dnd.org
+++ b/dnd.org
@@ -4,12 +4,15 @@
 #+title:    DnD Landing Page
 #+author:   zfoteff
 #+date:     [2023-07-05 Wed]
-#+summary:  Glossary of common terms used during the game
+#+summary:  Landing page for DnD content
 
-* DnD :dnd:c0:
+* DnD
 #+BEGIN_CENTER
 [[id:17a96883-cc40-409c-9fb5-80d5ab0c8379][Player Introduction]]
+
 [[id:4ef8f616-b62a-42d3-987e-525e4187ae66][Race Descriptions]]
+
 [[id:campaign-classes][Campaign Classes]]
+
 [[id:a3719559-2b06-443a-b75a-96c9aa3f3b26][Glossary]]
 #+END_CENTER
