updates to notes

--- a/dm-materials/material-guide.org
+++ b/dm-materials/material-guide.org
@@ -6,14 +6,15 @@
 Material list [high to low]: cosmic -> meteor, moonstone -> iron -> stone -> wooden
 
 * Cosmic
-Highest tier. Highest damage potential, high critical damage chance, and will shatter the minds of weaker enemies who cannot comprehend the madness of the cosmos. Must be wielded by a magically trained individual to ensure that wielding the weapon does not cause the user to go mad. The user will have to fight off the effects of the weapon as they use it, limiting the material to usage by only high level characters.
+Highest tier. Highest damage potential, high critical damage chance, and will shatter the minds of weaker enemies who cannot comprehend the madness of the cosmos. Must be wielded by a highly skilled individual to ensure that wielding the weapon does not cause the user to go mad. The user will have to fight off the effects of the weapon as they use it, limiting the material to usage by only high level characters.
 
 Deals Chaos, Cosmic, and Madness damage to enemies
 * Brimstone
-Material crafted from the dregs of Hell.
+Material crafted from the dregs of Hell. Exceedingly rare.
 
-Deals madness and fire damage to enemies
+Deals madness and [[id:23919bd5-7bb0-4743-ae81-f07566ccd236][fire]] damage to enemies
 * Meteor
+
 * Moonstone
 * Dwarven Smelt
 * Steel
