--- a/dnd.org
+++ b/dnd.org
@@ -5,14 +5,17 @@
 #+author:   zfoteff
 #+date:     [2023-07-05 Wed]
 #+summary:  Landing page for DnD content
-
-* DnD
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="static/stylesheets/default-style.css" />
+-----
 #+BEGIN_CENTER
 [[id:17a96883-cc40-409c-9fb5-80d5ab0c8379][Player Introduction]]
 
-[[id:4ef8f616-b62a-42d3-987e-525e4187ae66][Race Descriptions]]
+[[file:character-sheet.pdf][Character Sheet]]
 
-[[id:campaign-classes][Campaign Classes]]
+[[id:campaign-classes][Class Descriptions]]
+
+[[id:4ef8f616-b62a-42d3-987e-525e4187ae66][Race Descriptions]]
 
 [[id:a3719559-2b06-443a-b75a-96c9aa3f3b26][Glossary]]
 #+END_CENTER
+-----
