--- a/races.org
+++ b/races.org
@@ -5,9 +5,13 @@
 #+author:   zfoteff
 #+date:     [2023-07-03 Mon]
 #+summary:  Campaign race details
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="static/stylesheets/default-style.css" />
 
-* Overview
 #+BEGIN_CENTER
+[[[id:DND][Main Menu]]]
+#+END_CENTER
+-----
+#+CAPTION: Character Race Overview
 | Name      | Base HP | Advantages | Disadvantages | Bonuses |
 |-----------+---------+------------+---------------+---------|
 | Human     |       6 | +1 to any  | -1 to any     |         |
@@ -18,7 +22,6 @@
 | Dwarf     |         |            |               |         |
 | Elemental |         |            |               |         |
 | Reptilian |         |            |               |         |
-#+END_CENTER
 * Human
 The white bread of WORLD's races. Not particularly good at anything, not incompetent either.
 
@@ -49,3 +52,4 @@ Tool proficiency
 Dark vision
 * Elemental
 * Reptilian
+-----
